--- a/index.html
+++ b/index.html
@@ -52,6 +52,38 @@
                 </div>
             </div>
         </section>
+
+        <!-- what i do section start -->
+        <section>
+            <h3 class="sec-title">What I do</h3>
+            <p id="do" class="sec-des">I have more than 10 years experience building software for clients all over the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to find out more about my experience? Check out my online resume and project portfolio.</p>
+
+            <div class="skill-cont">
+                <!-- .skill*4>img+p.skill-ttl+p.skill-des -->
+                <div class="skill">
+                    <img src="images/icons/js.png" alt="">
+                    <p class="skill-ttl">Vanilla JavaScript</p>
+                    <p class="skill-des">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/react.png" alt="">
+                    <p class="skill-ttl">React</p>
+                    <p class="skill-des">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/nodejs.png" alt="">
+                    <p class="skill-ttl">Node.js</p>
+                    <p class="skill-des">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/mongo.png" alt="">
+                    <p class="skill-ttl">MongoDB</p>
+                    <p class="skill-des">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+            </div>
+
+        </section>
+        
     </main>
     <footer>
 
