--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         </section>
         <!-- Resume Section -->
         <section>
-            <h3 class="sec-ttl">A summary of my Resume</h3>
+            <h3 class="sec-title">A summary of my Resume</h3>
             
             <div class="rsm-cnt">
                 <!-- div.rsm-col*2>h3.rsm-con-ttl -->
@@ -135,6 +135,10 @@
                             to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
                     </div>
                 </div>
+            </div>
+
+            <div class="cv">
+                <button class="btn-primary">Download CV</button>
             </div>
         </section>
         
