--- a/index.html
+++ b/index.html
@@ -141,10 +141,24 @@
                 <button class="btn-primary">Download CV</button>
             </div>
         </section>
-        
     </main>
     <footer>
+        <div class="ftr-clm">
+            <h3 class="sec-ttl">Let's Connect</h3>
+            <p class="sec-des">
+                Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.
+            </p>
+            <div class="links">
+                <a href=""><img src="images/icons/facebook.png" alt=""></a>
+                <a href=""><img src="images/icons/twitter.png" alt=""></a>
+                <a href=""><img src="images/icons/insta.png" alt=""></a>
+            </div>
 
+        </div>
+        <div class="ftr-clm">
+            <h3 class="sec-ttl">Let's Message Me</h3>
+            
+        </div>
     </footer>
 </body>
 </html>
