--- a/index.html
+++ b/index.html
@@ -157,7 +157,13 @@
         </div>
         <div class="ftr-clm">
             <h3 class="sec-ttl">Let's Message Me</h3>
-            
+            <form class="contact" action="">
+                <input type="text" placeholder="Your Name">
+                <input type="email" name="" id="" placeholder="Your Email">
+                <textarea name="" id="" placeholder="Message" cols="30" rows="10"></textarea>
+                <input class="btn-primary" type="submit" value="Submit">
+
+            </form>
         </div>
     </footer>
 </body>
