--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 
         </div>
         <div class="ftr-clm">
-            <h3 class="sec-ttl">Let's Message Me</h3>
+            <h3 class="sec-ttl">Let's Message Me Right Now.</h3>
             <form class="contact" action="">
                 <input type="text" placeholder="Your Name">
                 <input type="email" name="" id="" placeholder="Your Email">
